@@ -1,0 +1,13 @@
+MODULE_NAME = Sata
+MODULE_DESCRIPTION = This module help Sata devices to be recognized as internal
+MODULE_AUTHOR = "Cparm"
+MODULE_VERSION = "1.0.0"
+MODULE_COMPAT_VERSION = "1.0.0"
+MODULE_START = $(MODULE_NAME)_start
+MODULE_DEPENDENCIES =
+
+DIR = Sata
+
+MODULE_OBJS = Sata.o
+
+include ../MakeInc.dir
